Modified Changelog. Add the sites to the original tutorials on the
Modified Changelog.
Add the sites to the original tutorials on the tutorials that had a real site that is.
Fixed the bug about the .xcf.gz file for Drawing_Shapes.

--- a/tutorials/3d_Logo/index.html
+++ b/tutorials/3d_Logo/index.html
@@ -289,6 +289,10 @@
   but don't under estimate the power of selections to do your dirty work.
 </p>
 
+<p>
+ The original tutorial can be found <a href="http://syngin.gimp.no/tutorials/logo.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
