--- a/tutorials/Advanced_Animations/index.html
+++ b/tutorials/Advanced_Animations/index.html
@@ -97,6 +97,10 @@
   don't hesitate and drop by up at #gimp on irc.gimp.org:6669.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://jimmac.musichall.cz/tutor2.php3">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
