--- a/tutorials/Bezier_Selections/index.html
+++ b/tutorials/Bezier_Selections/index.html
@@ -46,6 +46,10 @@
   <li>When you are satisfied with the shape, click inside the curves to turn it into a selection</li>
 </ol>
 
+<p>
+  The original tutorial can be found <a href="http://tigert.gimp.org/gimp/tutorials/bezier/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
