--- a/tutorials/Borders_On_Selections/index.html
+++ b/tutorials/Borders_On_Selections/index.html
@@ -61,6 +61,10 @@
   interesting results.. here are some examples.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://bitbit.org/cms.php/gimp/tutorials/stroke_selection.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
