--- a/tutorials/Changing_Background_Color_1/index.html
+++ b/tutorials/Changing_Background_Color_1/index.html
@@ -108,6 +108,10 @@
   <li>Paint underneath the new image with the original color to bring it back to those portions that need it</li>
 </ul>
 
+<p>
+  The original tutorial can be found <a href="http://www.gimp.org/~sjburges/color_to_alpha/demo/color2alpha.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
