--- a/tutorials/Changing_Background_Color_2/index.html
+++ b/tutorials/Changing_Background_Color_2/index.html
@@ -82,6 +82,10 @@
   The sunflower image was taken by the photographer Raymond Lofthouuse.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://bitbit.org/cms.php/gimp/tutorials/remove_one_color.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
