--- a/tutorials/Coloring_A_BW_Sketch/index.html
+++ b/tutorials/Coloring_A_BW_Sketch/index.html
@@ -68,6 +68,10 @@
   This is the end. Still reading here? Now it's your turn! Quickly open the GIMP and start playing! ;) 
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://the.sunnyspot.org/slm/tut_skcol.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
