--- a/tutorials/Draw_A_Paint_Brush/index.html
+++ b/tutorials/Draw_A_Paint_Brush/index.html
@@ -232,6 +232,10 @@
   Thank you for the interest :-)
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://tigert.gimp.org/gimp/tutorials/drawing_a_paintbrush/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
