--- a/tutorials/Drawing_Shapes/index.html
+++ b/tutorials/Drawing_Shapes/index.html
@@ -109,11 +109,15 @@
   <br /><br />
   The next thing is to start using the geometrical shapes as building blocks to make things. And you can twist the beziers to make a bit more fancy stuff...
   <br /><br />
-  I have provided the xcf-file  for the image we just created, if you want to experiment with it, although you should be perfectly able to do just as good yourself.
+  I have provided <a href="example.xcf.gz">the xcf-file</a> for the image we just created, if you want to experiment with it, although you should be perfectly able to do just as good yourself.
   <br />
   Thanks for your interest.
   <br /><br />
   tigert
+</p>
+
+<p>
+  The original tutorial can be found <a href="http://tigert.gimp.org/gimp/tutorials/bezier_shapes/">here</a>.
 </p>
 
 </div>
