--- a/tutorials/Film_Grain/index.html
+++ b/tutorials/Film_Grain/index.html
@@ -99,6 +99,10 @@
   To denoise an image, try &lt;Image&gt;/Filters/Blur/Selective Guassian Blur. It's slow, but very nifty.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://carol.gimp.org/gimp/tutorials/film-grain/">here</a>
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
