--- a/tutorials/Golden_Text/index.html
+++ b/tutorials/Golden_Text/index.html
@@ -103,6 +103,10 @@
   That's it :-)
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://www.home.unix-ag.org/simon/gimp/golden.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
