--- a/tutorials/Image_Pipes/index.html
+++ b/tutorials/Image_Pipes/index.html
@@ -146,6 +146,10 @@
   Saving this file as a .gih file, and using the paramaters as shown above.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://adrian.gimp.org/gimppipe/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
