--- a/tutorials/Quickmask/index.html
+++ b/tutorials/Quickmask/index.html
@@ -99,6 +99,10 @@
   As in the tutorial, this one used Waves, but instead of blurring, I used Filters &gt; Blur &gt; Pixelize instead. 
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://www.xach.com/gimp/tutorials/quickmask/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
