--- a/tutorials/Red_Eye_Removal/index.html
+++ b/tutorials/Red_Eye_Removal/index.html
@@ -79,6 +79,10 @@
    I watched work on WinGIMP occuring between diaper changings and feedings also. *chuckle*
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://carol.gimp.org/other/sloth/diary/redeye.html">here</a>
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
