--- a/tutorials/Simple_Animations/index.html
+++ b/tutorials/Simple_Animations/index.html
@@ -102,6 +102,10 @@
   <img src="flower-banner.gif" alt=""/>
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://jimmac.musichall.cz/tutor1.php3">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
