--- a/tutorials/Tileable_Textures/index.html
+++ b/tutorials/Tileable_Textures/index.html
@@ -95,6 +95,10 @@
   Just some examples whipped up in a few minutes. Click on the image to see a page with the image tiled as a background.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://adrian.gimp.org/texture_tut/">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
