--- a/tutorials/Using_GAP/index.html
+++ b/tutorials/Using_GAP/index.html
@@ -80,6 +80,10 @@
   It will reduce file size, but you'll be unable to move the object on the final rendering to alter the animation.
 </p>
 
+<p>
+  The original tutorial can be found <a href="http://jimmac.musichall.cz/popup.php3?img=gap&mapa=">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
