i hadn't saved team.html before commiting. bah.

--- a/team.html
+++ b/team.html
@@ -16,6 +16,8 @@
   <li>Guest Lecturer, Manish Singh</li>
   <li>Tutorial Coordinator, Niklas Mattisson</li>
   <li>Windows Section, Branko Collins</li>
+  <li>Contributer, Guillermo S. Romero</li>
+  <li>Contributer, Nathan C. Summers</li>
 </ul>
 <div class="subtitle">Tutorial Authors</div>
 <ul>
