ran recode to turn the utf to latin-1. This has to be done manually for
2002-10-28 rockwlrs <rock@gimp.org>

        * about/authors.html: ran recode to turn the utf to latin-1.  This
        has to be done manually for now.

--- a/about/authors.html
+++ b/about/authors.html
@@ -70,7 +70,7 @@ and more from (in alphabetical order):
 <li>Pavel Grinfeld</li>
 <li>Michael Hammel</li>
 <li>Henrik Hansen</li>
-<li>Ville Hautam√§ki</li>
+<li>Ville Hautam‰ki</li>
 <li>James Henstridge</li>
 <li>Eric Hernes</li>
 <li>David Hodson</li>
