--- a/tutorials/Basic_Perl/index.html
+++ b/tutorials/Basic_Perl/index.html
@@ -42,12 +42,14 @@
   here is the general framework of a Perl-Fu script.
 </p>
 <div class="code">
+<br />
   #!/usr/local/bin/perl 
   use Gimp ":auto"; 
   use Gimp::Fu;
   # Register extension to gimp
   register ... ;
   exit main();  # Handle over control to gimp 
+  <br />
 </div>
 <p>
   The interesting items to note in the script is the use of the two modules Gimp and Gimp::Fu, 
@@ -92,7 +94,7 @@ They can be added to an image using the 'gimp_image_add_layer' command</td></tr>
   E.g. I.e. a call to create a new image of size 100x150 of type RGB looks as follows:
 </p>
 
-<div class="code">$img = gimp_image_new(100, 150, RGB)</div>
+<div class="code"><br />$img = gimp_image_new(100, 150, RGB)<br /></div>
 
 <p>
   The PDB entry above shows that gimp_image_new is called with three parameters width, height, type. These are all of type INT32. This type and other types will be explained below.
@@ -101,8 +103,8 @@ They can be added to an image using the 'gimp_image_add_layer' command</td></tr>
 </p>
 
 <pre>script_fu_basic1_logo("Hello", 72,
-        "-*-utopia-*-r-*-*-72-*-*-*-*-*-*-*",
-        [0,0,0],[1,1,1]);</pre>
+                      "-*-utopia-*-r-*-*-72-*-*-*-*-*-*-*",
+                      [0,0,0],[1,1,1]);</pre>
 <p>
   Unfortunately, as of the writing, calling Script Fu from perl has proved a to make both ScriptFu and gimp very unstable and caused both of them to crash. 
   If any of the readers is able to describe what is needed to get it to run successfully, I will happily include this in a future version of this tutorial.
@@ -111,6 +113,94 @@ They can be added to an image using the 'gimp_image_add_layer' command</td></tr>
   <b>NOTE:</b> When calling a PDB function from Perl::Gimp that has an image and a drawable as the two first arguments, 
   only the drawable should be given as argument in the calling sequence.
 </p>
+
+<div class="subtitle">4. Gimp::Fu and the register function</div>
+<p>
+  Gimp-Fu is perl's answer to Script-Fu. It provides a simplified method for accepting parameters for a script through a Gtk interface, 
+  just like script-fu, but as we shall see below, it has some additional bells and whistles.
+   <br /><br />
+  The main function for a Gimp-Fu script is the register function. This function declares the interface of the script to gimp. 
+  The register function takes the following 10 parameters, that must all be provided:
+</p>
+<ol>
+  <li>The name of the function - a string. This is the name of the function as it will be known in the PDB.</li>
+  <li>A small description - a string</li>
+  <li>A help text - a string</li>
+  <li>The authors name - a string</li>
+  <li>The copyright of the script - a string</li>
+  <li>Creation date - a string</li>
+  <li>Menu path - a string. The path has one of the two forms:
+    <ol>
+      <li>"&lt;Toolbox&gt;/Xtns/Perl-Fu/Script Name"</li>
+      <li>"&lt;Image&gt;/Perl-Fu/Script Name"</li>
+    </ol>
+     If form 1. is given, then the script is a standalone script that appears in the menu hierarchy under Xtns/Perl-Fu and takes 
+     all its inputs through the Gimp::Fu interface frame. If form 2. is given on the other hand, then the script is tied to the 
+     image menu popped up through the right hand button over any image. In this case Gimp::Fu will add as the first two parameters 
+     to the script the image and the drawable active when the script was invoked.</li>
+  <li>The acceptable image types - a string. This list contains a list of image types acceptable. 
+  This field is only used for scripts that are in the "&lt;Image&gt;" hieararchy. Possible values are listed in the table below:
+  <table>
+  <tr><th bgcolor=#dfdfdf>value</th><th bgcolor=#dfdfdf>meaning</th></tr>
+  <tr><td bgcolor=#dfdfee valign=top>*<td bgcolor=#dfdfee valign=top>Any images are accepted</tr>
+  <tr><td bgcolor=#dfdfee valign=top>RGB <td bgcolor=#dfdfee valign=top>RGB images</tr>
+  <tr><td bgcolor=#dfdfee valign=top>RGBA <td bgcolor=#dfdfee valign=top>RGB images with alpha channels</tr>
+  <tr><td bgcolor=#dfdfee valign=top>GREY <td bgcolor=#dfdfee valign=top>Grey level images</tr>
+  </table></li>
+  
+  <li>Parameters - A reference to an array of parameters. (A reference to an array in perl is simply an array written within square brackets). 
+  Each parameter in turn is a reference to an array containg the following four or five values:
+  <ol>
+<li> The type of the parameter. The types recognized by Gimp::Fu and their perl are given in the following table:
+  <table>
+   <tr><th bgcolor=#dfdfdf>Type</th><th bgcolor=#dfdfdf width=30%>Possible forms</th>
+   <th bgcolor=#dfdfdf width=50%>Comment</tr>
+   <tr><td bgcolor=#dfdfee valign=top>PF_INT<br>
+  PF_INT32<br>
+  PF_INT16<br>
+  PF_INT8<br><td bgcolor=#dfdfee valign=top>42<td bgcolor=#dfdfee valign=top>A number. PF_INT is a synonym to PF_INT32.</tr>
+  <tr><td bgcolor=#dfdfee valign=top>PF_VALUE<br>
+  PF_FLOAT<br><td bgcolor=#dfdfee valign=top>3.141<td bgcolor=#dfdfee valign=top>A floating point number.
+  <tr><td bgcolor=#dfdfee valign=top>PF_TOGGLE<br>
+  PF_BOOLEAN<td bgcolor=#dfdfee valign=top>0<br>1<td bgcolor=#dfdfee valign=top>A boolean value.
+  <tr><td bgcolor=#dfdfee valign=top>PF_SLIDER<br>
+  PF_SPINNER
+  <td bgcolor=#dfdfee valign=top>An integer value through a slider and a spinner interface. The range parameter should be specified and is interpreted as minimum, maximum, and step, e.g. [0,100,1].
+  <td bgcolor=#dfdfee valign=top><img src="tpix.gif" width=0>
+  <tr><td bgcolor=#dfdfee valign=top>PF_FONT<td bgcolor=#dfdfee valign=top>-*-blippo-*-*-*-*-24-*-*-*-*-*-*-*<td bgcolor=#dfdfee valign=top>A font in X11 font format. This interface launches a font browser.
+  <tr><td bgcolor=#dfdfee valign=top>PF_STRING<td bgcolor=#dfdfee valign=top>"A string"<td bgcolor=#dfdfee valign=top>A string</tr>
+  <tr><td bgcolor=#dfdfee valign=top>PF_COLOR<br>
+  PF_COLOUR<td bgcolor=#dfdfee valign=top>[255,127,0]<br>
+  <tt>#ff7f00</tt>
+  <td bgcolor=#dfdfee valign=top>A color may either be expressed as a reference to an array of three components, or as a hexadecimal triple, proceeded by the hash sign.</tr>
+  <tr><td bgcolor=#dfdfee valign=top>PF_TOGGLE<td bgcolor=#dfdfee valign=top>0<br>1<td bgcolor=#dfdfee valign=top>A boolean toggle
+  <tr><td bgcolor=#dfdfee valign=top>PF_IMAGE<td bgcolor=#dfdfee valign=top>-<td bgcolor=#dfdfee valign=top>An image
+  <tr><td bgcolor=#dfdfee valign=top>PF_DRAWABLE<td bgcolor=#dfdfee valign=top>-<td bgcolor=#dfdfee valign=top>A drawable.
+  <tr><td bgcolor=#dfdfee valign=top>PF_BRUSH<td bgcolor=#dfdfee valign=top><img src="tpix.gif" width=0><td bgcolor=#dfdfee valign=top>A brush
+  <tr><td bgcolor=#dfdfee valign=top>PF_GRADIENT<td bgcolor=#dfdfee valign=top><img src="tpix.gif" width=0><td bgcolor=#dfdfee valign=top>A gradient
+  <tr><td bgcolor=#dfdfee valign=top>PF_PATTERN<td bgcolor=#dfdfee valign=top><img src="tpix.gif" width=0><td bgcolor=#dfdfee valign=top>A pattern
+  </table>
+</li>
+ <li>The name of the parameter - a string</li>
+ <li>A help text for the parameter</li>
+ <li>Default value for the parameter. This should be given in the form listed in the table above.</li>
+ <li>An array defining allowed range for the value. This is only possible for PF_SLIDER and PF_SPINNER.</li>
+ </ol>
+ <li>A reference to an array of return types of the sub in the 11th parameter.</li>
+ <li>The sub to be called - a reference to a sub . This subroutine will be called when the associated menu entry declared through the Menu path described above. 
+  When the sub is called it is passed as arguments the list of parameters declared in field 9, declared above, and in the case of a "&lt;Image&gt;..." script, 
+  the active image and layer as first and second parameters.
+ <br />
+  A reference to a sub in perl may be declared in two ways. Either by declaring a subroutine at a different place in the source file, 
+  e.g. sub run and reference it by writing \&amp;run. An alternative way is to write it inline by simply writing:
+  <br />
+  <pre>sub { ($text, $color) = @_ ; ... }</pre>
+  <br />
+  The sub is expected not need to display a new image after it has created it. Instead it is expected to return the new image or images that were created in 
+  accordance with the return types declared in parameter 10 of the register call described above. This behaviour has been added in order to be able to call the sub noninteractively. 
+  More about that behaviour below.
+ </li>
+</ol>
 
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
