--- a/about/mediakit.html
+++ b/about/mediakit.html
@@ -3,11 +3,15 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading">Title goes here</div>
+<div class="heading">The GIMP Media Kit</div>
 <div class="subtitle">Subtitle goes here</div>
 <p>
   Text goes here...
 </p>
+<ul>
+<li><a href="wilber-huge-alpha.png">the original Wilber</li>
+<li><a href="Wilber_Construction_Kit_XP.xcf.gz">the latest Construction Kit</li>
+</ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
