forgot to add them to the last one

--- a/unix/index.html
+++ b/unix/index.html
@@ -20,7 +20,7 @@
   </ul>
 <div class="subtitle">The GIMP's Preferences</div>
   <ul>
-    <li>user_install</li>
+    <li><a href="user_install.html">user_install</li>
     <li>File --&gt;Preferences</li>
     <li><a href="gimprc.html">gimprc</a></li>
     <li><a href="gtkrc.html">gtkrc</a></li>
