Modified ChangeLog. Add the original site links to some missing tutorials.
Modified ChangeLog.
Add the original site links to some missing tutorials.
Add the Perl Debbuged tutorial.

--- a/tutorials/Basic_Perl/index.html
+++ b/tutorials/Basic_Perl/index.html
@@ -733,6 +733,10 @@ exit main();
   <li>How to do "free selections".</li>
 </ul>
 
+<p>
+  The original tutorial can be found <a href="http://imagic.weizmann.ac.il/~dov/gimp/perl-tut.html">here</a>.
+</p>
+
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
