--- a/tutorials/Basic_Scheme/index.html
+++ b/tutorials/Basic_Scheme/index.html
@@ -560,7 +560,9 @@ The blur is a gaussian blur with the specified feather radius.
               SF-IMAGE "Image" 0
               SF-DRAWABLE "Layer" 0)
 </div>
-<br />
+<p>
+  The original tutorial can be found <a href="http://imagic.weizmann.ac.il/~dov/gimp/scheme-tut.html">here</a>.
+</p>
 
 </div>
 <!--#include virtual="/includes/tutnavbar.inc" -->
