--- a/about/index.html
+++ b/about/index.html
@@ -71,6 +71,7 @@
 <div class="subtitle"><a href="history.html">History of The GIMP</a></div>
   <ul>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
+    <li><a name="src-change123" href="ChangeLogs/1.2.3/ChangeLog.1.html">Gimp 1.2.3 ChangeLog</a></li>
     <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
     <li><a name="src-change12" href="ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
   </ul>
