about/index.html:  added some historical urls to the history list

--- a/about/index.html
+++ b/about/index.html
@@ -70,6 +70,8 @@
   </ul>
 <div class="subtitle"><a href="history.html">History of The GIMP</a></div>
   <ul>
+    <li><a href="http://groups.google.com/groups?selm=petm-2907952329370001%40charnley.hip.berkeley.edu&output=gplain">Two Questions</a></li>
+    <li><a href="http://groups.google.com/groups?selm=3ua2hd%24bbv%40agate.berkeley.edu&output=gplain">One Of Two Options</a></li>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
     <li><a name="src-change123" href="ChangeLogs/1.2.3/ChangeLog.1.html">Gimp 1.2.3 ChangeLog</a></li>
     <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
