about/index.html:  added some historical urls to the history list

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -61,10 +61,6 @@
   background color of your image and learn the magical properties of Select By Color.
 </p>
 <p>
-  <a href="Photo_Image_Editing/">Photo Image Editing</a> A series of methods for 
-  professional photo editing. 
-</p>
-<p>
   <a href="Coloring_A_BW_Sketch/">Coloring A BW Sketch</a> Color sketches anime style.
 </p>
 <p>
@@ -103,6 +99,18 @@
 <p>
  <a href="Advanced_Animations/">Advanced Animations</a> Learn how to make an animation with GAP.
 </p>
+
+<div class="subtitle">Photo Editing</div>
+<p><a href="Photo_Edit/title1.html">Title1</a></p>
+<p><a href="Photo_Edit/title2.html">Title2</a></p>
+<p><a href="Photo_Edit/title3.html">Title3</a></p>
+
+<div class="subtitle">HTML</div>
+<p><a href="html/title1.html">Title1</a></p>
+<p><a href="html/title2.html">Title2</a></p>
+<p><a href="html/title3.html">Title3</a></p>
+
+
 <div class="subtitle">Script Authoring (Presented Alphabetically)</div>
 <p>
   <a href="Script_Image/">Working With The Image</a> Before you script, know what an
