--- a/unix/index.html
+++ b/unix/index.html
@@ -20,8 +20,8 @@
   </ul>
 <div class="subtitle">The GIMP's Preferences</div>
   <ul>
-    <li><a href="user_install.html">user_install</li>
-    <li>File --&gt;Preferences</li>
+    <li><a href="user_install.html">user_install</a></li>
+    <li><a href="user_install.html">File --&gt;Preferences</a></li>
     <li><a href="gimprc.html">gimprc</a></li>
     <li><a href="gtkrc.html">gtkrc</a></li>
   </ul>
