Modified ChangeLog. Edit the photo edit menu to the index.
Modified ChangeLog.
Edit the photo edit menu to the index.

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -101,9 +101,36 @@
 </p>
 
 <div class="subtitle">Photo Editing</div>
-<p><a href="Photo_Edit/title1.html">Title1</a></p>
-<p><a href="Photo_Edit/title2.html">Title2</a></p>
-<p><a href="Photo_Edit/title3.html">Title3</a></p>
+<p>
+  <a href="Photo_Edit/Channel_Mixer/">Channel Mixer</a> Use the Channel Mixer to create B&amp;W photos from color photos.
+</p>
+<p>
+  <a href="Photo_Edit/Reducing_CCD_Noise/">Reducing CCD Noise</a> Learn how to reduce the CCD Noise in photos.
+</p>
+<p>
+  <a href="Photo_Edit/ContrastMask/">Contrast Mask</a> Help the image to be more detailed with Contrast Mask.
+</p>
+<p>
+<a href="Photo_Edit/ND_Filter/">Neutral Density</a> Learn how to create a ND filter for the digital images.
+</p>
+<p>
+  <a href="Photo_Edit/Sepia_Toning/">Sepia Toning</a> Create a nice sepia photo from color images.
+</p>
+<p>
+  <a href="Photo_Edit/Blur_Overlays/">Gaussian Blur Overlays</a> Use GIMP to create a gaussian blur overlay to the photos.
+</p>
+<p>
+  <a href="Photo_Edit/Blown_Out_Highlights/">Salvaging Blown Out Highlights</a> Help your photo to get rid of all thoose blown out highlights.
+</p>
+<p>
+  <a href="Photo_Edit/Blending_Exposures/">Blending Exposures</a> Use GIMP to blend to photos together from the same scene to one photo.
+</p>
+<p>
+  <a href="Photo_Edit/Smart_Sharpening/">"Smart" Sharpening</a> Make your images more sharpened with the help of "Smart" Sharpening.
+</p>
+<p>
+  <a href="Photo_Edit/Selective_Color/">Selective Colorization</a> Change your colored image to B&amp;W and selected areas with colors.
+</p>
 
 <div class="subtitle">HTML</div>
 <p><a href="html/title1.html">Title1</a></p>
