--- a/tutorials/Photo_Edit/ContrastMask/index.html
+++ b/tutorials/Photo_Edit/ContrastMask/index.html
@@ -29,7 +29,7 @@
   Experiment to see if it can work for your particular image.
 </p>
 
-<div class="subtitle">Step 1</div>
+<div class="subtitle">The Procedure</div>
 <p class="images">
   <img src="original.jpg" alt=""/>
 </p>
@@ -41,7 +41,7 @@
   We want to brighten the dark areas a little and darken the light areas a little. In other words, reduce contrast.
 </p>
 
-<div class="subtitle">Step 2</div>
+<div class="subtitle">Step 1</div>
 <p class="images">
   <img src="layers2.jpg" alt=""/>
 </p>
@@ -49,7 +49,7 @@
   Open the Layers dialog. Right-click on the Background layer and select Duplicate (there is also a button for this in the bottom button bar of the Layers dialog.
 </p>
 
-<div class="subtitle">Step 3</div>
+<div class="subtitle">Step 2</div>
 <p class="images">
   <img src="editlayerattr.jpg" alt=""/>
   <img src="layers3.jpg" alt=""/>
@@ -59,7 +59,7 @@
   but it is helpful to prevent confusion about what is on each layer, especially if you add some additional layers for other editing purposes).
 </p>
 
-<div class="subtitle">Step 4</div>
+<div class="subtitle">Step 3</div>
 <p class="images">
   <img src="image2.jpg" alt=""/>
 </p>
@@ -67,7 +67,7 @@
   Select the Contrast Mask layer. Go to the image window and right-click, selecting <span class="filter">Image/Colors/Desaturate</span>. The image should look B&amp;W.
 </p>
 
-<div class="subtitle">Step 5</div>
+<div class="subtitle">Step 4</div>
 <p class="images">
   <img src="image3.jpg" alt=""/>
 </p>
@@ -76,7 +76,7 @@
   (light with dark, dark with light) to reduce the overall contrast.
 </p>
 
-<div class="subtitle">Step 6</div>
+<div class="subtitle">Step 5</div>
 <p class="images">
   <img src="layers4.jpg" alt=""/>
   <img src="image4.jpg" alt=""/>
@@ -87,7 +87,7 @@
   Don't worry, we're not done yet.
 </p>
 
-<div class="subtitle">Step 7</div>
+<div class="subtitle">Step 6</div>
 <p class="images">
   <img src="original.jpg" alt=""/>
   <img src="image5.jpg" alt=""/>
@@ -102,7 +102,7 @@
   The image at top left is the original, the top right is with the contrast mask.
 </p>
 
-<div class="subtitle">Step 8</div>
+<div class="subtitle">Step 7</div>
 <p class="images">
   <img src="contrastdialog.jpg" alt=""/>
   <img src="imagewtypcontrastreduction.jpg" alt=""/>
@@ -113,7 +113,7 @@
   This one looks kind of flat by comparison.
 </p>
 
-<div class="subtitle">Step 9</div>
+<div class="subtitle">Step 8</div>
 <p class="images">
   <img src="histogram-before.jpg" alt="Histogram-Before"/>
   <img src="histogram-after.jpg" alt="Histogram-After"/>
@@ -126,7 +126,7 @@
   Note how the typical contrast adjustment has lost a lot of values at both ends, but the mask technique basically preserved the entire scale.
 </p>
 
-<div class="subtitle">Step 10</div>
+<div class="subtitle">Step 9</div>
 <p class="images">
   <img src="layers5.jpg" alt=""/>
 </p>
