Modified ChangeLog. Small fixes.
Modified ChangeLog.
Small fixes.

--- a/tutorials/Photo_Edit/Blur_Overlays/index.html
+++ b/tutorials/Photo_Edit/Blur_Overlays/index.html
@@ -51,6 +51,8 @@
 <div class="subtitle">Step 3</div>
 <p class="images">
   <img src="layers4.jpg" alt=""/>
+</p>
+<p class="images">
   <img src="levels.jpg" alt=""/>
   <img src="image-overlay.jpg" alt=""/>
 </p>
@@ -117,6 +119,8 @@
 <div class="subtitle">Step 7</div>
 <p class="images">
   <img src="image-threshold-marqueeselect.jpg" alt=""/>
+</p>
+<p class="images">
   <img src="gaussblur2.jpg" alt=""/>
   <img src="image-threshold-blur.jpg" alt=""/>
 </p>
@@ -144,6 +148,8 @@
 <p class="images">
   <img src="addmaskoptions.jpg" alt=""/>
   <img src="layers5.jpg" alt=""/>
+</p>
+<p class="images">
   <img src="layers6.jpg" alt=""/>
   <img src="layers7.jpg" alt=""/>
 </p>
@@ -174,7 +180,8 @@
   <br /><br />
   "Screen" has a milder effect than either "Overlay" or "Multiply" and will generally just intensify the colors/saturation. 
   You may not want to lighten the upper layer at all, or perhaps even darken it. Experiment to see what effects you can get.
-</p>
+  </li>
+</ul>
 
 <div class="subtitle">Other Examples</div>
 <p class="images">
